[tool.poetry]
name = "equilibrium"
version = "0.1.0"
description = ""
authors = ["zack466"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
